--- a/docs/ProtestDynamics/index.qmd
+++ b/docs/ProtestDynamics/index.qmd
@@ -79,3 +79,5 @@ Why not continuous time models?  Simultaneous equations in continuous time is th
 4. Did you consider auto-ARIMA for forecasts at scale?
 
 5. What does warping mean for understanding dependence as we are changing the metric of time, no?
+
+6. The D seems to do very little in *AX models.
